# fairMLHealth

./: .gitignore  CHANGELOG.md  CHANGELOGS.md  Dockerfile  LICENSE.txt  README.md  azure-pipelines.yaml  build_test.sh  integration_test.sh  setup.cfg  setup.py  version.json  win32workaround.sh
docs/: Evaluating_Fairness.md  Helpful Resources.md  Measures_QuickReference.md  Quick Reference.md  Quick_References.md  README.md  References.md  References_and_Resources.md  Resources.md  Summary_Tables.md  docs.md
examples_and_tutorials/: Example-BinaryClassificationTemplate.ipynb  Example-ToolUsage.ipynb  Example-ToolUsage_Binary.ipynb  Example-ToolUsage_BinaryClassification.ipynb  Example-ToolUsage_Regression.ipynb  README.md  Supplemental-ModelsForBinaryClassificationExample.ipynb  Tutorial-EvaluatingFairnessInBinaryClassification.ipynb  Tutorial-EvaluatingFairnessInRegression.ipynb
fairMLHealth/: Binary Classification Fairness Template.ipynb  __init__.py  binary_classification_fairness_template.ipynb  classification_fairness_template.ipynb  classification_fairness_template.py  format_mimic_data.py  model_comparison.py  reports.py  tutorial_helpers.py
fairmlhealth/: README.md  __classification_metrics.py  __fairness_metrics.py  __kdd2020_tutorial_helpers.py  __load_mimic_data.py  __mimic_data.py  __performance_metrics.py  __preprocessing.py  __report_processing.py  __utils.py  __validation.py  analyze.py  fairness_metrics.py  format_mimic_data.py  measure.py  mimic_data.py  model_comparison.py  performance_metrics.py  report.py  reports.py  stat_utils.py  stratified_reports.py  tools.py  tutorial_helpers.py  utils.py
kdd_fairness_bias/: format_mimic_data.py  kdd_fairness_in_healthcare_tutorial.ipynb  kdd_fairness_in_healthcare_tutorial.py  mimic_prediction_test.py  tutorial_helpers.py
publications/: FairnessInhealthcareML-KDD-2020-TutorialNotebook-Copy1.ipynb  FairnessInhealthcareML-KDD-2020-TutorialNotebook.ipynb  FairnessInhealthcareML-KDD2020-TutorialNotebook.ipynb  KDD2020-FairnessInHealthcareML-TutorialNotebook.py  KDD2020-FairnessInhealthcareML-TutorialNotebook.ipynb  README.md
templates/: README.md  Template-BinaryClassificationAssessment.ipynb  Template-BinaryClassificationAssessment.py  (+1 more)
(+110 files in other folders)
