[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
long_description = ("A library facilitating fairness measurement",
                    " and deployment of fairness-aware ML algorithms")