[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[aliases]
test = pytest

[tool:pytest]
addopts =
    -v
    -x
    -p no:forked
    --durations=0
    --ignore=notebooks
