[metadata]
name = fairmlhealth
version = 1.0.1
description= Health-centered variation analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KenSciResearch/fairMLHealth
author = Christine Allen
author_email = ca.magallen@gmail.com
project_urls =
    KenSci = https://www.kensci.com
    GitHub Pages = https://kensciresearch.github.io/fairMLHealth
keywords =
    healthcare
    machine learning
    fairness
    fair ML
    responsible AI
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires =
    >=3.6,<4
install_requires =
    aif360>=0.3.0,<=0.4.0
    ipython
    jupyter
    numpy>=1.16
    pandas>=1.0.3
    requests
    scipy>=1.4.1,<1.6.0
    scikit-learn>=0.21

[options.extras_require]
dev =
    %(tests)s
    %(tutorials)s
tests =
    pytest==5.4.2
    ipyparallel
    nbformat
    nbconvert
    regex
    pypiwin32; platform_system == "Windows"
    pywin32; platform_system == "Windows"
tutorials =
    matplotlib
    seaborn
    xgboost

# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[aliases]
test = pytest

[tool:pytest]
addopts =
    -v
    -x
    -p no:forked
    --durations=0
    --ignore=notebooks

